/*
 * Copyright (C) 2021 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package android.hardware.automotive.vehicle.proto;

message DumpResult {
    /* If callerShouldDumpState is true, caller would print the information in buffer and
     * continue to dump its state, otherwise would just dump the buffer and skip its own
     * dumping logic. */
    bool caller_should_dump_state = 1;
    /* The dumped information for the caller to print. */
    string buffer = 2;
}
